[Refactor] Refactor Test Code (#208)
* refactor: refactor Interview

* refactor: create Test Factory and refactor code

* fix: rollback interview code